			ROX-Filer
			A RISC OS-like filer for X
			by Thomas Leonard

02-Mar-2003
~~~~~~~~~~~
Stop pinboard icons flickering when you move over them (Daniele Peri).
Use XSettings drag-and-drop threshold.

01-Mar-2003
~~~~~~~~~~~
Bugfix: Backdrop image could be redrawn in the wrong place (Stephen Watson).

27-Feb-2003 (Release 1.3.7)
~~~~~~~~~~~
Updated French manual translation (Arnaud Calvo).
Allow an empty AppInfo translation so that a label can be translated without
changing the value.

25-Feb-2003
~~~~~~~~~~~
Updated Russian translation (Alexey Lubimov).

23-Feb-2003
~~~~~~~~~~~
When using the Rename and Link boxes, use the appropriate drag cursor
(suggested by Michael Adams).
Bugfix: A double-click which starts on one file and ends on another is now
	ignored (reported by Michael Adams).
Bugfix: Test for valid sort-type in SOAP call was reserved, so you couldn't set
	the sort type (reported by Damjan Bole).
Bugfix: Using a SOAP call to open a non-existant directory made the filer
	crash.
Bugfix: Drag-and-drop raising on the panel didn't quite work (Daniele Peri).

22-Feb-2003
~~~~~~~~~~~
Make Size toolbar icon only set the size. Use a second button to set automatic
mode.

13-Feb-2003
~~~~~~~~~~~
Updated Spanish translation (Marcelo Ramos).
Alpha blended pinboard icons now get clipped correctly even with GTK+-2.0.

12-Feb-2003
~~~~~~~~~~~
Fixed some spelling errors (Marcelo Ramos).
Select the current style by default when opening the Set Backdrop box
(reported by Marcelo Ramos).
Fix problems with pinboard drawing of semi-transparent icons (fixed for
GTK+-2.2 only).

11-Feb-2003
~~~~~~~~~~~
Merged Set Run Action, Set Icon and Set Backdrop dropboxes into a single
Ultimate DropBox widget, and made all three interfaces much nicer.
Dragging to the Home and Up toolbar tools now supports the menu-on-drag
option (reported by Laurent Moussault).
Allow changing the pinboard style without having to drag the image back in
(requested by Jesse Wagner).