@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+03-Mar-2003
+~~~~~~~~~~~
+Use stock icons in menus, and fix some possible problems in the menu code
+(Stephen Watson).
+
 02-Mar-2003
 ~~~~~~~~~~~
 Stop pinboard icons flickering when you move over them (Daniele Peri).
